--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -31,7 +31,7 @@ jobs:
       - id: dashlord-report
         uses: SocialGouv/dashlord-actions/report@main
         with:
-          base-path: /dashlord
+          base-path: /dashlord-collectivites
 
       # to save the generated report.json as artifact
       - uses: actions/upload-artifact@v2
